--- a/views/partials/get-started.ejs
+++ b/views/partials/get-started.ejs
@@ -1,4 +1,4 @@
-<div class="container-fluid mb-5 px-0">
+<div class="container-fluid px-0">
   <section class="get-started bg-garageup-primary bg-icon bg-icon-reverse bg-icon--light bg-icon-reverse--light">
     <style>
       /* Scoped: Get Started CTA button using Washology lime + blue text */
